--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,11 @@
 @font-face {
-    font-family: Inter;
+    font-family: 'Inter';
     src: url(//assets/Fonts/Inter-Medium.ttf);
 }
 
 
 body {
-    font-family: Inter;
+    font-family: 'Inter';
     margin: 0;
     padding: 0;
 }
