--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Inter';
-    src: url(//assets/Fonts/Inter-Medium.ttf);
+    src: url(../assets/Fonts/Inter-Medium.ttf);
 }
 
 
